[gd_scene load_steps=2 format=3 uid="uid://ima0x8emf62r"]

[ext_resource type="Script" path="res://Components/winScreen.gd" id="1_jdvvf"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 250.0
offset_bottom = 250.0
script = ExtResource("1_jdvvf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -2500.0
offset_top = -2500.0
offset_right = 2500.0
offset_bottom = 2500.0

[node name="PopUp" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -150.0
offset_top = -300.0
offset_right = 150.0
offset_bottom = 300.0
alignment = 1

[node name="WinnerLabel" type="Label" parent="PopUp"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
uppercase = true

[node name="PlayAgainButton" type="Button" parent="PopUp"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Play Again"
clip_text = true

[node name="QuitButton" type="Button" parent="PopUp"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"
